[package]
name = "currency-converter"
version = "0.1.0"
authors = ["derklaro"]

edition = "2021"
rust-version = "1.56.1" # 2021 edition requires 1.56

license = "MIT"
publish = false
repository = "https://github.com/derklaro/currency-converter"
description = "Small service that is able to fetch information about currencies and present them in a rest api"

[profile.release]
lto = true
strip = true
panic = 'abort'
opt-level = 'z'
codegen-units = 1

[dependencies]
anyhow = "*"
axum = "0.6.*"
serde_json = "1.0.*"
tokio = { version = "1.34.*", features = ["full"] }
moka = { version = "0.12.*", features = ["future"] }
serde = { version = "1.0.*", features = ["derive"] }
reqwest = { version = "0.11.*", default-features = false, features = ["json", "rustls-tls"] }
